Remove Letter from print options Fix last instruction missing border on A5 Remove print window menu Show printing indication on print window

--- a/assets/css/roadbook-print.css
+++ b/assets/css/roadbook-print.css
@@ -13,6 +13,28 @@ body {
   margin-top: 0px;
 }
 
+/* Tinted overlay */
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); /* Tinted overlay */
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Centered text */
+#overlay-text {
+  color: white;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 #roadbook-header {
   margin-bottom: 20px;
 }
@@ -90,15 +112,6 @@ body {
 .glyph-container img {
   height: 53px;
   width: 53px;
-}
-
-.total-distance.A5 {
-  font-size: 3.45em;
-}
-
-.waypoint.A5 {
-  width: 580px !important;
-  /* works for letter */
 }
 
 .print-button {
